# osia

./: pyproject.toml
.github/workflows/: linter.yml
osia/: cli.py
osia/installer/downloader/: install.py
